--- a/java_project/client_gui/src/view/Join.fxml
+++ b/java_project/client_gui/src/view/Join.fxml
@@ -1,17 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="600.0" prefWidth="978.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane maxHeight="600.0" maxWidth="978.0" prefHeight="600.0" prefWidth="978.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER" layoutX="439.0" layoutY="200.0" prefHeight="200.0" prefWidth="100.0">
-         <children>
-            <Label text="Label" />
-         </children>
-      </VBox>
+      <Label alignment="CENTER" layoutX="430.0" layoutY="44.0" prefHeight="60.0" prefWidth="130.0" text="회원가입" textAlignment="CENTER">
+         <font>
+            <Font name="Forte" size="30.0" />
+         </font>
+      </Label>
+      <Separator layoutX="287.0" layoutY="121.0" prefHeight="3.0" prefWidth="433.0" />
+      <PasswordField alignment="CENTER" layoutX="380.0" layoutY="215.0" prefHeight="23.0" prefWidth="235.0" />
+      <TextField alignment="CENTER" layoutX="380.0" layoutY="170.0" prefHeight="23.0" prefWidth="235.0" />
+      <Label alignment="CENTER" layoutX="303.0" layoutY="172.0" text="ID">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="299.0" layoutY="218.0" text="비밀번호">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="296.0" layoutY="268.0" text="비밀번호확인">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <TextField alignment="CENTER" layoutX="381.0" layoutY="266.0" prefHeight="23.0" prefWidth="235.0" />
+      <Label alignment="CENTER" layoutX="298.0" layoutY="317.0" text="이름">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="297.0" layoutY="371.0" text="나이">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="297.0" layoutY="420.0" text="거주지역">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField alignment="CENTER" layoutX="380.0" layoutY="318.0" prefHeight="23.0" prefWidth="235.0" />
+      <TextField alignment="CENTER" layoutX="380.0" layoutY="367.0" prefHeight="23.0" prefWidth="235.0" />
+      <MenuButton alignment="CENTER" layoutX="382.0" layoutY="418.0" mnemonicParsing="false" text="광역시도">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Action 1" />
+          <MenuItem mnemonicParsing="false" text="Action 2" />
+        </items>
+      </MenuButton>
+      <MenuButton alignment="CENTER" layoutX="478.0" layoutY="418.0" mnemonicParsing="false" text="구">
+         <items>
+            <MenuItem mnemonicParsing="false" text="Action 1" />
+            <MenuItem mnemonicParsing="false" text="Action 2" />
+         </items>
+      </MenuButton>
+      <Button alignment="CENTER" layoutX="631.0" layoutY="169.0" mnemonicParsing="false" text="중복체크" />
+      <Button layoutX="398.0" layoutY="493.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="91.0" text="이전">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font>
+      </Button>
+      <Button layoutX="510.0" layoutY="493.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="99.0" text="회원가입" />
+      <RadioButton layoutX="380.0" layoutY="135.0" mnemonicParsing="false" text="일반회원" />
+      <RadioButton layoutX="504.0" layoutY="135.0" mnemonicParsing="false" text="사업장" />
+      <Separator layoutX="283.0" layoutY="468.0" prefHeight="3.0" prefWidth="433.0" />
    </children>
 </AnchorPane>
