--- a/java_project/client_gui/src/view/UserMain.fxml
+++ b/java_project/client_gui/src/view/UserMain.fxml
@@ -13,7 +13,7 @@
       <AnchorPane prefHeight="55.0" BorderPane.alignment="CENTER">
          <children>
             <TextField layoutX="613.0" layoutY="16.0" />
-            <Label fx:id="txtTitle" layoutX="38.0" layoutY="7.0" text="TITLE">
+            <Label fx:id="txtTitle" layoutX="38.0" layoutY="7.0" text="WooHwaHa">
                <font>
                   <Font size="36.0" />
                </font>
@@ -32,7 +32,7 @@
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="50.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="btnCalendar" mnemonicParsing="false" text="Cal" />
-            <Button mnemonicParsing="false" text="Frd" />
+            <Button fx:id="btnFriend" mnemonicParsing="false" text="Frd" />
             <Button mnemonicParsing="false" text="Rsrv" />
             <Button mnemonicParsing="false" text="Rsrv" />
             <Button mnemonicParsing="false" text="Cnfg" />
