--- a/java_project/client_gui/src/view/MonthDetail.fxml
+++ b/java_project/client_gui/src/view/MonthDetail.fxml
@@ -6,15 +6,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:controller="controller.MonthDetailController" minHeight="150.0" prefWidth="400.0" style="-fx-background-color: white; -fx-border-color: black;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="150.0" prefWidth="400.0" style="-fx-background-color: white; -fx-border-color: black;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MonthDetailController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="일정" />
       <TableView fx:id="table" layoutX="14.0" layoutY="36.0" prefHeight="100.0" prefWidth="370.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="시작 시각" />
-          <TableColumn prefWidth="293.0" text="일정 제목" />
+            <TableColumn prefWidth="75.0" text="번호" />
+          <TableColumn prefWidth="117.0" text="시작 시각" />
+          <TableColumn prefWidth="175.0" text="일정 제목" />
         </columns>
       </TableView>
       <Button fx:id="btnNew" layoutX="328.0" layoutY="10.0" mnemonicParsing="false" text="새 일정" />
+      <Label id="today" fx:id="today" layoutX="64.0" layoutY="14.0" text="Label" visible="false" />
    </children>
 </AnchorPane>
