--- a/java_project/client_gui/src/view/UpdateSchedule.fxml
+++ b/java_project/client_gui/src/view/UpdateSchedule.fxml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.collections.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.collections.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="200.0" style="-fx-background-color: white; -fx-border-color: black;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.NewScheduleController">
+<AnchorPane prefHeight="458.0" prefWidth="858.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UpdateScheduleController">
    <children>
-      <Label id="lblTitle" fx:id="lblTitle" layoutX="9.0" layoutY="7.0" text="새 일정">
+      <Label layoutX="27.0" layoutY="24.0" text="일정 수정">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField id="start_time" fx:id="start_time" editable="false" layoutX="27.0" layoutY="112.0" prefHeight="23.0" prefWidth="220.0" />
+      <Label layoutX="27.0" layoutY="64.0" text="기존 정보">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <TextField fx:id="txtTitle" layoutX="10.0" layoutY="55.0" prefHeight="23.0" prefWidth="180.0" promptText="제목을 입력하세요." />
-      <Label layoutX="19.0" layoutY="34.0" text="일정 제목" />
-      <Label layoutX="19.0" layoutY="89.0" text="장소" />
-      <TextField fx:id="txtPlace" layoutX="10.0" layoutY="110.0" prefHeight="23.0" prefWidth="180.0" promptText="장소를 입력하세요.(선택)" />
-      <ComboBox fx:id="startTime" layoutX="10.0" layoutY="162.0" prefHeight="23.0" prefWidth="85.0">
-      <items>
+      <Label layoutX="38.0" layoutY="90.0" text="시작 일자" />
+      <Label layoutX="278.0" layoutY="90.0" text="종료 일자" />
+      <TextField id="end_time" fx:id="end_time" editable="false" layoutX="267.0" layoutY="112.0" prefHeight="23.0" prefWidth="220.0" />
+      <Button id="btnCancel" fx:id="btnCancel" layoutX="560.0" layoutY="392.0" mnemonicParsing="false" prefWidth="85.0" text="취소" />
+      <Button id="btnAccept" fx:id="btnAccept" layoutX="560.0" layoutY="358.0" mnemonicParsing="false" prefWidth="85.0" text="수락" />
+      <ComboBox fx:id="newEndTime" layoutX="267.0" layoutY="323.0" prefHeight="23.0" prefWidth="85.0">
+         <items>
             <FXCollections fx:factory="observableArrayList">
                <String fx:value="00:00" />
                <String fx:value="00:30" />
@@ -72,13 +80,12 @@
             </FXCollections>
          </items>
       </ComboBox>
-      
-      <Label layoutX="19.0" layoutY="141.0" text="시작 시각" />
-      <DatePicker fx:id="endDate" layoutX="10.0" layoutY="215.0" prefWidth="180.0" />
-      <Label layoutX="19.0" layoutY="193.0" text="종료일" />
-      <Label layoutX="115.0" layoutY="140.0" text="종료 시각" />
-      <ComboBox fx:id="endTime" layoutX="106.0" layoutY="161.0" prefHeight="23.0" prefWidth="85.0">
-      <items>
+      <Label layoutX="276.0" layoutY="302.0" text="종료 시각" />
+      <Label layoutX="36.0" layoutY="266.0" text="종료일" />
+      <DatePicker fx:id="newEndDate" layoutX="27.0" layoutY="323.0" prefWidth="180.0" />
+      <Label layoutX="276.0" layoutY="242.0" text="시작 시각" />
+      <ComboBox id="newStartTime" fx:id="newStartTime" layoutX="267.0" layoutY="263.0" prefHeight="23.0" prefWidth="85.0">
+         <items>
             <FXCollections fx:factory="observableArrayList">
                <String fx:value="00:00" />
                <String fx:value="00:30" />
@@ -131,9 +138,18 @@
             </FXCollections>
          </items>
       </ComboBox>
-      
-      <Button id="btnAccept" fx:id="btnAccept" layoutX="10.0" layoutY="256.0" mnemonicParsing="false" prefWidth="85.0" text="수락" />
-      <Button fx:id="btnCancel" layoutX="106.0" layoutY="256.0" mnemonicParsing="false" prefWidth="85.0" text="취소" />
-      <Label id="today" fx:id="today" layoutX="141.0" layoutY="9.0" text="Label" />
+      <TextField id="detail" fx:id="detail" layoutX="265.0" layoutY="207.0" prefHeight="23.0" prefWidth="220.0" promptText="장소를 입력하세요.(선택)" />
+      <Label layoutX="274.0" layoutY="186.0" text="장소" />
+      <Label layoutX="36.0" layoutY="187.0" text="일정 제목" />
+      <TextField id="title" fx:id="title" layoutX="27.0" layoutY="208.0" prefHeight="23.0" prefWidth="220.0" promptText="제목을 입력하세요." />
+      <Label id="scheNo" fx:id="scheNo" layoutX="158.0" layoutY="66.0" text="Label" />
+      <DatePicker id="newStartDate" fx:id="newStartDate" layoutX="27.0" layoutY="264.0" prefWidth="180.0" />
+      <Label layoutX="36.0" layoutY="242.0" text="시작일" />
+      <Separator layoutX="27.0" layoutY="160.0" prefHeight="3.0" prefWidth="461.0" />
+      <Button id="btnDelete" fx:id="btnDelete" layoutX="30.0" layoutY="392.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="105.0" text="일정 삭제하기" />
+      <Label layoutX="36.0" layoutY="302.0" text="종료일" />
    </children>
+   <padding>
+      <Insets left="30.0" top="30.0" />
+   </padding>
 </AnchorPane>
