회원 탈퇴 수정

--- a/java_project/client_gui/src/view/UserMain.fxml
+++ b/java_project/client_gui/src/view/UserMain.fxml
@@ -35,7 +35,7 @@
             <Button id="btnFrd" fx:id="btnFriend" mnemonicParsing="false" text="" />
             <Button id="btnRsrv" mnemonicParsing="false" text="" />
             <Button id="btnRsrvDetail" mnemonicParsing="false" text="Rsrv" />
-            <Button id="btnCnfg" mnemonicParsing="false" text="" />
+            <Button id="btnCnfg" fx:id="btnConfig" mnemonicParsing="false" text="" />
          </children>
          <BorderPane.margin>
             <Insets />
