--- a/java_project/client_gui/src/view/Main.fxml
+++ b/java_project/client_gui/src/view/Main.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="600.0" prefWidth="978.0" styleClass="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<BorderPane stylesheets="@../css/application.css" prefHeight="600.0" prefWidth="978.0" styleClass="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <center>
       <VBox alignment="BOTTOM_CENTER" maxHeight="278.0" maxWidth="300.0" prefHeight="278.0" prefWidth="300.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
