--- a/java_project/client_gui/src/view/FriendList.fxml
+++ b/java_project/client_gui/src/view/FriendList.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.collections.*?>
 
-
-<AnchorPane stylesheets="@../css/application.css" prefHeight="600.0" prefWidth="978.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FriendListController">
+<AnchorPane prefHeight="600.0" prefWidth="978.0" stylesheets="@../css/application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FriendListController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="48.0" prefWidth="131.0" text="친구 목록">
          <font>
@@ -64,7 +63,8 @@
             <TextField fx:id="frd_age" layoutX="132.0" layoutY="177.0" />
             <Label layoutX="64.0" layoutY="227.0" text="주소" />
             <TextField fx:id="frd_addr" layoutX="132.0" layoutY="225.0" />
-            <Button  fx:id="invite" layoutX="324.0" layoutY="94.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="111.0" text="모임초대" />
+            <Button fx:id="invite" layoutX="324.0" layoutY="94.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="111.0" text="모임초대" />
+            <Button fx:id="btnFrdDelete" layoutX="324.0" layoutY="225.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="111.0" text="친구 삭제" />
          </children>
       </AnchorPane>
    </children>
