--- a/java_project/client_gui/src/view/FriendList.fxml
+++ b/java_project/client_gui/src/view/FriendList.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.collections.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="978.0" stylesheets="@../css/application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FriendListController">
+<AnchorPane prefHeight="600.0" prefWidth="978.0" stylesheets="/css/application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FriendListController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="48.0" prefWidth="131.0" text="친구 목록">
          <font>
