--- a/java_project/client_gui/src/view/MonthDetail.fxml
+++ b/java_project/client_gui/src/view/MonthDetail.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane stylesheets="@../css/application.css" minHeight="150.0" prefWidth="400.0" style="-fx-background-color: white; -fx-border-color: black;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MonthDetailController">
+<AnchorPane stylesheets="/css/application.css" minHeight="150.0" prefWidth="400.0" style="-fx-background-color: white; -fx-border-color: black;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MonthDetailController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="일정" />
       <TableView fx:id="table" layoutX="14.0" layoutY="36.0" prefHeight="100.0" prefWidth="370.0">
