--- a/java_project/client_gui/src/view/SearchIcon.fxml
+++ b/java_project/client_gui/src/view/SearchIcon.fxml
@@ -8,7 +8,7 @@
 <?import javafx.collections.*?>
 
 <AnchorPane
- prefHeight="31.0" prefWidth="202.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchIconController" stylesheets="@../css/application.css">
+ prefHeight="31.0" prefWidth="202.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchIconController" stylesheets="/css/application.css" >
    <children>
       <ListView fx:id="frdList" prefHeight="25.0" prefWidth="136.0">
       	<items>
